--- a/index.html
+++ b/index.html
@@ -1,4 +1,27 @@
 <!doctype HTML>
 <html>
+    <head>
+		<title>Mian Uddin</title>
+		<link rel='stylesheet' href='css/stylesheet.css'>
+        <link rel='stylesheet' href='css/bootstrap.min.css'>
+		<link rel='stylesheet' href='css/normalize.css'>
+		<meta name="theme-color" content="#673AB7">
+		<script type='text/javascript'>
+            WebFontConfig = {
+                    google: { families: [ 'Roboto:300,400,700:latin' ] }
+                };
+                (function() {
+                var wf = document.createElement('script');
+                wf.src = ('https:' == document.location.protocol ? 'https' : 'http') + '://ajax.googleapis.com/ajax/libs/webfont/1/webfont.js';
+                wf.type = 'text/javascript';
+                wf.async = 'true';
+                var s = document.getElementsByTagName('script')[0];
+                s.parentNode.insertBefore(wf, s);
+                })();
+        </script>
+		<meta charset='UTF-8'>
+		<meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1, user-scalable=no">
+	</head>
+
 
 </html>
