--- a/index.html
+++ b/index.html
@@ -41,6 +41,9 @@
                 </div>
             </div>
         </div>
+        <footer>
+            YouTube Repeat by Mian Uddin on <a href='https://github.com/mianuddin/youtube-repeat'>GitHub</a>
+        </footer>
         
         <script src="https://ajax.googleapis.com/ajax/libs/jquery/2.1.3/jquery.min.js"></script>
         <script src="js/script.js"></script>
