Added support for YouTube urls.

--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
             <div class='container'>
                 <div class='row'>
                     <form action=''>
-                        <input type='text' name='v' placeholder="Video ID (k1rV0GXBwcU)">
+                        <input type='text' name='v' placeholder="YouTube Link or ID">
                         <input type='submit' value='VIEW'>
                     </form>
                 </div>
