Changed title to 'YouTube Repeat

--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!doctype HTML>
 <html>
     <head>
-		<title>Mian Uddin</title>
+		<title>YouTube Repeat</title>
 		<link rel='stylesheet' href='css/stylesheet.css'>
         <link rel='stylesheet' href='css/bootstrap.min.css'>
 		<link rel='stylesheet' href='css/normalize.css'>
