--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
 		<link rel='stylesheet' href='css/stylesheet.css'>
         <link rel='stylesheet' href='css/bootstrap.min.css'>
 		<link rel='stylesheet' href='css/normalize.css'>
-		<meta name="theme-color" content="#673AB7">
+		<meta name="theme-color" content="#F44336">
 		<script type='text/javascript'>
             WebFontConfig = {
                     google: { families: [ 'Roboto:300,400,700:latin' ] }
